--- a/src/app/admin/components/admin-orders/admin-orders.component.html
+++ b/src/app/admin/components/admin-orders/admin-orders.component.html
@@ -1,22 +1,28 @@
-<table class="table">
-  <thead>
-    <tr>
-      <th>Customer</th>
-      <th>Date</th>
-      <th></th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let order of orders$ | async">
-      <td>
-        {{ order.shipping.name }}
-      </td>
-      <td>{{ order.datePlaced | date }}</td>
-      <td>
-        <a routerLink="/">View</a>
-      </td>
-    </tr>
-  </tbody>
-</table>
-<br />
-<br />
+<div *ngIf="loading; else loaded">
+  <admin-spinner></admin-spinner>
+</div>
+
+<ng-template #loaded>
+  <table class="table">
+    <thead>
+      <tr>
+        <th>Customer</th>
+        <th>Date</th>
+        <th></th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let order of orders$ | async">
+        <td>
+          {{ order.shipping.name }}
+        </td>
+        <td>{{ order.datePlaced | date }}</td>
+        <td>
+          <a routerLink="/">View</a>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+  <br />
+  <br />
+</ng-template>
