--- a/src/app/admin/components/product-form/product-form.component.html
+++ b/src/app/admin/components/product-form/product-form.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row mb-3">
   <div class="col-md-6">
     <!--    in all our input fields, we change the ngModel to two way binding [(ngModel)]="product.theInputFieldName"-->
     <form #f="ngForm" (ngSubmit)="save(f.value)">
@@ -63,7 +63,28 @@
           Category is required.
         </div>
       </div>
-
+      <div class="form-group">
+        <label for="category">Status </label>
+        <select
+          id="status"
+          class="form-control"
+          [(ngModel)]="product.status"
+          name="status"
+          required
+          #status="ngModel"
+        >
+          <option value=""></option>
+          <option *ngFor="let s of status$ | async" [value]="s.$key">
+            {{ s.name }}
+          </option>
+        </select>
+        <div
+          class="alert alert-danger"
+          *ngIf="status.touched && status.invalid"
+        >
+          Status is required.
+        </div>
+      </div>
       <div class="form-group">
         <label for="imageUrl">Image Url </label>
         <input
