--- a/src/app/shared/components/product-card/product-card.component.css
+++ b/src/app/shared/components/product-card/product-card.component.css
@@ -1,5 +1,6 @@
 .card {
   margin-bottom: 30px;
+  /*margin-right: 100px;*/
 }
 
 .card-footer {
@@ -10,4 +11,29 @@
 .card-footer button {
   cursor: pointer;
   text-transform: uppercase;
+}
+
+.product-card-img {
+  width: 300px;
+  height: 300px;
+  align-self: center;
+  border-radius: 100%;
+  background-size: cover;
+}
+
+h6 {
+  font-weight: bold;
+}
+
+@media (max-width: 767.98px) {
+  .card-title {
+    font-size: 10px;
+  }
+  img {
+    width: 150px;
+    height: 150px;
+    align-self: center !important;
+    border-radius: 100%;
+    background-size: cover;
+  }
 }
