--- a/src/app/shopping/components/my-orders/my-orders.component.html
+++ b/src/app/shopping/components/my-orders/my-orders.component.html
@@ -1,3 +1,6 @@
+<div *ngIf="loading">
+  <spinner></spinner>
+</div>
 <table class="table">
   <thead>
     <tr>
@@ -8,6 +11,7 @@
   </thead>
   <tbody>
     <tr *ngFor="let order of orders$ | async">
+      <!--<tr *ngFor="let o of orders">-->
       <td>
         {{ order.shipping.name }}
       </td>
