--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,8 @@
 @import "~font-awesome/css/font-awesome.css";
 @import "~@fortawesome/fontawesome-free/css/all.css";
 @import "bootstrap.css";
-
+@import "~ngx-toastr/toastr.css";
+@import "app/spinnner.css";
 html,
 body {
   margin: 0;
