--- a/src/app/shared/components/product-card/product-card.component.css
+++ b/src/app/shared/components/product-card/product-card.component.css
@@ -3,37 +3,49 @@
   /*margin-right: 100px;*/
 }
 
-.card-footer {
-  padding: 0;
-  background: #fff;
-}
-
-.card-footer button {
-  cursor: pointer;
-  text-transform: uppercase;
-}
-
 .product-card-img {
-  width: 300px;
-  height: 300px;
-  align-self: center;
-  border-radius: 100%;
-  background-size: cover;
+  width: 395px;
+  height: 263px;
+  /*align-self: center;*/
+  /*border-radius: 100%;*/
+  /*background-size: cover;*/
 }
 
-h6 {
-  font-weight: bold;
-}
+/*h6 {*/
+/*font-weight: bold;*/
+/*}p*/
 
 @media (max-width: 767.98px) {
   .card-title {
     font-size: 10px;
   }
+  .product-card-img {
+    width: 100%;
+    height: 80px;
+    /*align-self: center;*/
+    /*border-radius: 100%;*/
+    /*background-size: cover;*/
+  }
+  .status {
+    /*display: none;*/
+    font-size: 10px;
+  }
+}
+
+/* Media query for small screens and below smartphones and below */
+/* Anything we hide here will be hidden on smartphones */
+/* Anything we show here will be shown on smartphones */
+/*
+@media screen and (max-width: 576px) {
+  .card-title {
+    font-size: 10px;
+  }
   img {
-    width: 150px;
-    height: 150px;
+    width: 50px;
+    height: 50px;
     align-self: center !important;
     border-radius: 100%;
     background-size: cover;
   }
 }
+*/
