--- a/src/app/shopping/components/product-details/product-details.component.html
+++ b/src/app/shopping/components/product-details/product-details.component.html
@@ -2,7 +2,7 @@
   <div class="col-md-12">
     <h1>
       {{ product.title }}
-      <a href="https://facebook.com">
+      <a href="https://facebook.com" target="_blank">
         <img
           src="../../../../assets/icons/fb1.png"
           alt="Facebook"
@@ -10,7 +10,7 @@
           class="float-md-right mr-2 d-none d-md-block"
         />
       </a>
-      <a href="https://twitter.com">
+      <a href="https://twitter.com" target="_blank">
         <img
           src="../../../../assets/icons/twitter2.png"
           alt="Twitter"
@@ -18,7 +18,7 @@
           class="float-md-right mr-2 d-none d-md-block"
         />
       </a>
-      <a href="https://pinterest.com">
+      <a href="https://pinterest.com" target="_blank">
         <img
           src="../../../../assets/icons/pin-interest.png"
           alt="Twitter"
@@ -26,7 +26,7 @@
           class="float-md-right mr-2 d-none d-md-block"
         />
       </a>
-      <a href="https://youtube.com">
+      <a href="https://youtube.com" target="_blank">
         <img
           src="../../../../assets/icons/youtube.png"
           alt="Twitter"
@@ -77,7 +77,7 @@
 </ng-template>
 <div id="icon-mobile" class="mb-5">
   <hr />
-  <a href="https://facebook.com">
+  <a href="https://facebook.com" target="_blank">
     <img
       src="../../../../assets/icons/fb1.png"
       alt="Facebook"
@@ -85,7 +85,7 @@
       class=" mr-2"
     />
   </a>
-  <a href="https://twitter.com">
+  <a href="https://twitter.com" target="_blank">
     <img
       src="../../../../assets/icons/twitter2.png"
       alt="Twitter"
@@ -93,7 +93,7 @@
       class=" mr-2"
     />
   </a>
-  <a href="https://pinterest.com">
+  <a href="https://pinterest.com" target="_blank">
     <img
       src="../../../../assets/icons/pin-interest.png"
       alt="Twitter"
@@ -101,7 +101,7 @@
       class=" mr-2"
     />
   </a>
-  <a href="https://youtube.com">
+  <a href="https://youtube.com" target="_blank">
     <img
       src="../../../../assets/icons/youtube.png"
       alt="Twitter"
